Corrected jumpy selection/cursor on scrolling

--- a/src/timeline/timeline.scss
+++ b/src/timeline/timeline.scss
@@ -1,4 +1,5 @@
 .timeline {
+    position: relative;
     height: 100%;
     overflow-x: scroll;
     overflow-y: hidden;
